# vectorbridge

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  info.md  pyproject.toml
benchmark/: Dockerfile  README.md  create_test_license.py  deploy_azure.sh  docker-compose.source.yml  docker-compose.target.yml  generate_vectors.py  load_source.py  parse_results.py  run_benchmark.py  run_crossdc_benchmark.py  run_wire_comparison.py  test_small.py  wire_server.py
dashboard/: server.py
dashboard/static/: index.html
k8s/: cronjob.yaml  deployment.yaml  secret.yaml
tests/: conftest.py  test_checkpoint.py  test_migration.py  test_transport.py  test_verify.py
vectorbridge/: __init__.py  agent.py  bridge.py  checkpoint.py  cli.py  integrity.py  license.py  orchestrator.py  transport.py  verify.py
vectorbridge/connectors/: __init__.py  base.py  chromadb.py  faiss.py  pgvector.py  pinecone.py  qdrant.py  weaviate.py
