[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insight-vector-bridge"
version = "0.1.0"
description = "Universal vector database migration and sync middleware — powered by CHORUS Fabric tensor transport"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Amin Parva", email = "parvaamin@gmail.com" }]
keywords = ["vector", "database", "migration", "sync", "embeddings", "pgvector", "pinecone", "weaviate", "qdrant", "chromadb", "grpc", "AI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
pgvector = ["psycopg2-binary>=2.9.0"]
pinecone = ["pinecone-client>=3.0.0"]
chromadb = ["chromadb>=0.4.0"]
weaviate = ["weaviate-client>=4.0.0"]
qdrant = ["qdrant-client>=1.7.0"]
faiss = ["faiss-cpu>=1.7.0"]
all = [
    "psycopg2-binary>=2.9.0",
    "pinecone-client>=3.0.0",
    "chromadb>=0.4.0",
    "weaviate-client>=4.0.0",
    "qdrant-client>=1.7.0",
    "faiss-cpu>=1.7.0",
]
dev = ["pytest>=7.0", "pytest-asyncio", "black", "ruff"]

[project.scripts]
vectorbridge = "vectorbridge.cli:main"

[project.urls]
Homepage = "https://github.com/insightitsGit/vectorbridge"
Repository = "https://github.com/insightitsGit/vectorbridge"

[tool.setuptools.packages.find]
where = ["."]
include = ["vectorbridge*"]
